--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:hzou@vt.edu">email</a></li>
-        		<li><a href="https://inspirehep.net/authors/1056827">INSPIRE-HEP</a></li>
+        		<li><a href="https://inspirehep.net/authors/1056827">Inspire-hep</a></li>
 			<li><a href="https://arxiv.org/search/hep-th?query=Zou%2C+Hao&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></li>
 			</ul>
 		</footer>
