--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Hao!</h1>
-				<p>I'm currently a PhD student from Department of Physics, Virginia Tech. <a href="/about">Read more ...</a></p>
+				<p>I'm currently a PhD candidate from Department of Physics, Virginia Tech. <a href="/about">Read more ...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
