--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Hao Zou</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hao!</h1>
-				<p>I'm currently a PhD candidate from Department of Physics, Virginia Tech. <a href="/about">Read more ...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hzou@vt.edu">email</a></li>
-        		<li><a href="https://inspirehep.net/authors/1056827">inspire-hep</a></li>
-			<li><a href="https://arxiv.org/search/hep-th?query=Zou%2C+Hao&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hao Zou
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hao!</h1>
+	<p>I'm currently a PhD candidate from Department of Physics, Virginia Tech. <a href="/about">Read more ...</a></p>
+</div><!-- /.blurb -->
