--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,7 @@ title: About me
 	<p> I'm currently a graduate student from Department of Physics, Virginia Tech and expected to obtain the Ph.D. degree in the spring of 2021.</p>
 	
 	<ul class="links">
+	<h4 style="text-align:left">Useful links</h4>
 		<li><a href="https://www.phys.vt.edu">Virginia Tech</a></li>
 	</ul>
 </div>
