--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,18 @@
 ---
 layout: default
-title: About me
+title: About Me
 ---
 <div class="about">
-	<h1>About</h1>
-	<p> I'm currently a graduate student from Department of Physics, Virginia Tech and expected to obtain the Ph.D. degree in the spring of 2021.</p>
+	<h1>About Me</h1>
+	<p> I'm currently a graduate student from Department of Physics, Virginia Tech and I expect to obtain my Ph.D. degree in the spring of 2021. Rightnow I'm on the job market for a postdoc position on theoretical high energy physics.
+	
+	</p>
 	
 	<ul class="links">
 	<h4 style="text-align:left">Useful links</h4>
 		<li><a href="https://www.phys.vt.edu">Virginia Tech</a></li>
+		<li><a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a></li>
+		<li><a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a></li>
+		<li><a href="http://researchseminars.org">Online seminars</a></li>
 	</ul>
 </div>
