--- a/about/index.html
+++ b/about/index.html
@@ -3,10 +3,11 @@ layout: default
 title: About Me
 ---
 <div class="about">
-	<h1>About Me</h1>
-	<p> I'm currently a graduate student from Department of Physics, Virginia Tech and I expect to obtain my Ph.D. degree in the spring of 2021. Rightnow I'm on the job market for a postdoc position on theoretical high energy physics.
-	
+	<h2>About Me</h2>
+	<p> 	
+		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Before my PhD study at Virginia Tech, I earned a master degree in theoretical physics at the University of Chinese Academy of Sciences in China. Rightnow I am on the job market for a postdoc position on theoretical high energy physics.
 	</p>
+	
 	
 	<ul class="links">
 	<h4 style="text-align:left">Useful links</h4>
