--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,11 @@ title: About Me
 <div class="about">
 	<h2>About Me</h2>
 	<p> 	
-		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Before my PhD study at Virginia Tech, I earned a master degree in theoretical physics at the University of Chinese Academy of Sciences in China. Rightnow I am on the job market for a postdoc position on theoretical high energy physics.
+		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position on theoretical high energy physics.
+	</p>
+	
+	<p>
+		Before my PhD study at Virginia Tech, I earned a master degree in theoretical physics at the University of Chinese Academy of Sciences in China.	
 	</p>
 	
 	
