--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 layout: default
 title: Hao Zou
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Hao!</h1>
-	<p>I'm currently a PhD candidate from Department of Physics, Virginia Tech. <a href="/about">Read more ...</a></p>
-</div><!-- /.blurb -->
+<div class="about">
+	<h2>About Me</h2>
+	<p> 	
+		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position on theoretical high energy physics. 
+	</p>
+	
+	
+	<h3>Research interests</h3>
+	<p>
+		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics.
+	</p>
+	
+	
+	<ul class="links">
+	<h4 style="text-align:left">Useful links</h4>
+		<li><a href="https://www.phys.vt.edu">Virginia Tech</a></li>
+		<li><a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a></li>
+		<li><a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a></li>
+		<li><a href="http://researchseminars.org">Online seminars</a></li>
+	</ul>
+</div>
