--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Hao Zou
 	
 	
 	<ul class="links">
-	<h4 style="text-align:left">Useful links</h4>
+	<h4>Useful links</h4>
 		<li><a href="https://www.phys.vt.edu">Virginia Tech</a></li>
 		<li><a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a></li>
 		<li><a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a></li>
