--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@ title: Hao Zou
 		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics.
 	</p>
 	
+	<h3> Contact information </h3>
+	<p>
+	Hao Zou <br> Department of Physics <br> Virginia Tech <br> 850 West Campus Dr <br> Blacksburg, VA 24060, United States
+	</p>	
+	<p>
+	Office: Robeson 212A <br> E-mail: <a href="mailto:hzou@vt.edu"> hzou\"at\"vt.edu </a>
+	</p>
+	
 	
 	<ul class="links">
 	<h4>Useful links</h4>
