--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hao Zou
 ---
 <div class="about">
-	<h2>About Me</h2>
+	<h2>Hi there, I am Hao!</h2>
 	<p> 	
 		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position on theoretical high energy physics. 
 	</p>
@@ -19,7 +19,7 @@ title: Hao Zou
 	Hao Zou <br> Department of Physics <br> Virginia Tech <br> 850 West Campus Dr <br> Blacksburg, VA 24060, United States
 	</p>	
 	<p>
-	Office: Robeson 212A <br> E-mail: <a href="mailto:hzou@vt.edu"> hzou\"at\"vt.edu </a>
+	Office: Robeson 212A <br> E-mail: hzou "at" vt.edu
 	</p>
 	
 	
