--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ title: Hao Zou
 	</p>
 	
 	<h3> Contact information </h3>
-	<p>
+	<p style="font-size:12px">
 	Hao Zou <br> Department of Physics <br> Virginia Tech <br> 850 West Campus Dr <br> Blacksburg, VA 24060, United States
 	</p>	
-	<p>
+	<p style="font-size:12px">
 	Office: Robeson 212A <br> E-mail: hzou "at" vt.edu
 	</p>
 	
