--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@ title: Hao Zou
 	</p>
 	
 	<h3> Contact information </h3>
-	<p style="font-size:16px">
+	<p>
 	Hao Zou <br> Department of Physics <br> Virginia Tech <br> 850 West Campus Dr <br> Blacksburg, VA 24060, United States
 	</p>	
-	<p style="font-size:16px">
+	<p>
 	Office: Robeson 212A <br> E-mail: hzou "at" vt.edu
 	</p>
 	
 	
 	<ul class="links">
 	<h4>Useful links</h4>
-		<li><a href="https://www.phys.vt.edu">Virginia Tech</a></li>
-		<li><a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a></li>
-		<li><a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a></li>
-		<li><a href="http://researchseminars.org">Online seminars</a></li>
+		<p style="font-size:18px">
+			<a href="https://www.phys.vt.edu">Virginia Tech</a></li> <br> 
+			<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a> <br> 
+			<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a> <br> 
+			<a href="http://researchseminars.org">Online seminars</a>
+		</p>
 	</ul>
 </div>
