--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@ title: Hao Zou
 	</p>
 	
 	
-	<h3>Useful links</h3>
-	<p style="font-size:18px">
-		<a href="https://www.phys.vt.edu">Virginia Tech</a></li> <br> 
-		<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a> <br> 
-		<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a> <br> 
-		<a href="http://researchseminars.org">Online seminars</a>
+	<p style="font-size:18px";> <strong>Useful links:</strong> <a href="https://www.phys.vt.edu">Virginia Tech</a> | 
+		<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a> | 
+		<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a> |
+		<a href="http://researchseminars.org">Online seminars</a> 
 	</p>
 </div>
