--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hao Zou
 ---
 <div class="about">
 	<p> 	
-		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position on theoretical high energy physics. 
+		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position in theoretical high energy physics. 
 	</p>
 	
 	
