--- a/research/index.html
+++ b/research/index.html
@@ -1,8 +1,12 @@
 ---
-layout: post
+layout: default
 title: Research
 ---
 <div class="research">
+	<ul>
+		<li><a href="https://inspirehep.net/authors/1056827">inspire-hep</a></li>
+		<li><a href="https://arxiv.org/search/hep-th?query=Zou%2C+Hao&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></li>
+	</ul>
 	<p> 	
 		Under construction ... 
 	</p>
