--- a/research/index.html
+++ b/research/index.html
@@ -3,7 +3,9 @@ layout: default
 title: Research
 ---
 <div class="research">
-	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827">inSpire-hep</a> </p>
+	<h2>Selected papers </h2>
+	<p style="font-size: 15px"> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827">inSpire-hep</a> </p>
+	<h2>Talks </h2>
 	<p> 	
 		Under construction ... 
 	</p>
