--- a/research/index.html
+++ b/research/index.html
@@ -7,15 +7,15 @@ title: Research
 	<p style="font-size: 18px"> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827">inSpire-hep</a> </p>
 	<ol>
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
-		<li>W. Gu, E. Sharpe and H. Zou, "GLSMs for exotic Grassmannians," <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
-		<li>W. Gu, E. Sharpe and H. Zou, "Notes on two-dimensional pure supersymmetric gauge theories," <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
-		<li>W. Gu and H. Zou, "Supersymmetric Localization in GLSMs for Supermanifolds," JHEP 05 (2019), 019, <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
-		<li>H. Parsian, E.Sharpe and H. Zou, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33 (2018) no.18n19, 1850113, <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
+		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
+		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
+		<li>W. Gu and <strong>H. Zou</strong>, "Supersymmetric Localization in GLSMs for Supermanifolds," JHEP 05 (2019), 019, <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
+		<li>H. Parsian, E.Sharpe and <strong>H. Zou</strong>, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33 (2018) no.18n19, 1850113, <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
 	</ol>
 	
 	<h2>Talks </h2>
 	<ol>
-		<li>"Quantum cohomology and quantum K-theory from supersymmetric gauge theories," at VT Algebra Seminar, Department of Mathematics, Virginia Tech.</li>
-		<li>"Gauged linear sigma model for symplectic Grassmannians," at GLSMs 2020, Zoom.</li>
+		<li>"Quantum cohomology and quantum K-theory from supersymmetric gauge theories," <br> VT Algebra Seminar, Department of Mathematics, Virginia Tech.</li>
+		<li>"Gauged linear sigma model for symplectic Grassmannians," <br> GLSMs 2020, Zoom.</li>
 	</ol>
 </div>
