--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@ title: Research
 ---
 <div class="research">
 	<h2>Selected papers </h2>
-	<p style="font-size: 1em"> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827">INSPIRE-HEP</a>. </p>
+	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1.2em; line-height: 150%">
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
