--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,9 @@ layout: default
 title: CV of Hao Zou
 ---
 <div class="cv">
-	<p> 	
-		Under construction ... 
-	</p>
+	<h2> Education </h2>
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
+		<li>Aug, 2016 - present, Ph.D. in Physics at <strong>Virginia Tech</strong>, Blacksburg, U.S. <br> Advisor: Eric Sharpe </li>
+		<li>Sep, 2013 - Jun, 2016, M.S. in Theoretical Physics at <strong>University of Chinese Academy of Sciences</strong>, Beijing, China. <br> Advisor: Fu-Zhong Yang </li>
+	</ul>
 </div>
