--- a/cv/index.html
+++ b/cv/index.html
@@ -6,6 +6,8 @@ title: CV of Hao Zou
 	<h2> Education </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>Aug, 2016 - present, Ph.D. in Physics at <strong>Virginia Tech</strong>, Blacksburg, U.S. <br> Advisor: Eric Sharpe </li>
-		<li>Sep, 2013 - Jun, 2016, M.S. in Theoretical Physics at <strong>University of Chinese Academy of Sciences</strong>, Beijing, China. <br> Advisor: Fu-Zhong Yang </li>
+		<li>Sep, 2013 - Jun, 2016, M.S. in Theoretical Physics at <strong>University of Chinese Academy of Sciences</strong>, Beijing, China. <br> Advisor: Fu-Zhong Yang
+		<br> Thesis: "<i>Mirror symmetry, D-brane superpotential of open-closed topological strings and Ooguri-Vafa invariants</i>"</li>
+		<li>Sep, 2009 - Jun, 2013, B.S. in Applied Physics at <strong>Nanjing University of Science and Technology</strong>, Nanjing, China.</li>
 	</ul>
 </div>
