--- a/research/index.html
+++ b/research/index.html
@@ -13,7 +13,7 @@ title: Research
 		<li>H. Parsian, E.Sharpe and <strong>H. Zou</strong>, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33 (2018) no.18n19, 1850113, <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
 	</ol>
 	
-	<h2>Talks </h2>
+	<h2>Selected talks </h2>
 	<ol style="font-size:1.2em; line-height: 150%">
 		<li>"Quantum cohomology and quantum K-theory from supersymmetric gauge theories," <br> VT Algebra Seminar, Department of Mathematics, Virginia Tech, Sep 11, 2020.</li>
 		<li>"Gauged linear sigma model for symplectic Grassmannians," <br> GLSMs 2020, Zoom, Aug 18, 2020.</li>
