--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hao Zou
 ---
 <div class="about">
 	<p> 	
-		I am currently a PhD candidate in physics at Virginia Tech in the United States and I will defend for my PhD degree in the Spring of 2021. Rightnow I am on the job market for a postdoc position in theoretical high energy physics. 
+		I will work as a postdoctoral researcher at <a href="http://www.bimsa.cn">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu">Virginia Tech</a>.
 	</p>
 	
 	
@@ -22,7 +22,7 @@ title: Hao Zou
 	</p>
 	
 	
-	<p style="font-size:18px";> <strong>Useful links:</strong> <a href="https://www.phys.vt.edu">Virginia Tech</a> | 
+	<p style="font-size:18px";> <strong>Useful links:</strong>
 		<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a> | 
 		<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a> |
 		<a href="http://researchseminars.org">Online seminars</a> 
