--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hao Zou
 ---
 <div class="about">
 	<p> 	
-		I will work as a postdoctoral researcher at <a href="http://www.bimsa.cn">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu">Virginia Tech</a>.
+		I will work as a postdoctoral researcher at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
 	</p>
 	
 	
@@ -23,8 +23,8 @@ title: Hao Zou
 	
 	
 	<p style="font-size:18px";> <strong>Useful links:</strong>
-		<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki">String Theory Wiki</a> | 
-		<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html">Some mathematical resources</a> |
-		<a href="http://researchseminars.org">Online seminars</a> 
+		<a href="https://www.stringwiki.org/wiki/String_Theory_Wiki" target="_blank" rel="noopener noreferrer">String Theory Wiki</a> | 
+		<a href="http://mathsci.kaist.ac.kr/~jinhyun/useful.html" target="_blank" rel="noopener noreferrer">Some mathematical resources</a> |
+		<a href="http://researchseminars.org" target="_blank" rel="noopener noreferrer">Online seminars</a> 
 	</p>
 </div>
