--- a/cv/index.html
+++ b/cv/index.html
@@ -5,6 +5,10 @@ title: CV of Hao Zou
 <div class="cv">
 	<h2> Education </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
+		<li>Sep, 2021 - present <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong>, Beijing, China.
+	</ul>	
+	<h2> Education </h2>
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>Aug, 2016 - May, 2021, Ph.D. in Physics at <strong>Virginia Tech</strong>, Blacksburg, United States.<br> Advisor: Eric Sharpe
 		<br> Thesis: "<i>Low Dimensional Supersymmetric Gauge Theories and Mathematical Applications</i>"</li>
 		<li>Sep, 2013 - Jun, 2016, M.S. in Theoretical Physics at <strong>University of Chinese Academy of Sciences</strong>, Beijing, China. <br> Advisor: Fu-Zhong Yang
