--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: CV of Hao Zou
 ---
 <div class="cv">
-	<h2> Education </h2>
+	<h2> Employment </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>Sep, 2021 - present <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong>, Beijing, China.
 	</ul>	
