--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Hao Zou - Homepage
 	<p> 	
 		I will work as a postdoctoral researcher at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
 	</p>
-	
+	<p>中文测试</p>
 	
 	<h2>Research interests</h2>
 	<p>
