--- a/research/index.html
+++ b/research/index.html
@@ -7,8 +7,8 @@ title: Hao Zou - Research
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1.2em; line-height: 150%">
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
-		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
-		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
+		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," JHEP 10, 200 (2020), <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
+		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," JHEP 04, 261 (2021), <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
 		<li>W. Gu and <strong>H. Zou</strong>, "Supersymmetric Localization in GLSMs for Supermanifolds," JHEP 05 (2019), 019, <a href="arXiv:1807.05455 "> arXiv:1807.05455 [hep-th]</a>.</li>
 		<li>H. Parsian, E.Sharpe and <strong>H. Zou</strong>, "(0,2) versions of exotic (2,2) GLSMs," Int. J. Mod. Phys. A 33 (2018) no.18n19, 1850113, <a href ="https://arxiv.org/abs/1803.00286"> arXiv:1803.00286 [hep-th]</a>.</li>
 	</ol>
