--- a/cv/index.html
+++ b/cv/index.html
@@ -10,7 +10,7 @@ title: Hao Zou - CV
 	<h2> Education </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>Aug, 2016 - May, 2021, Ph.D. in Physics at <strong>Virginia Tech</strong>, Blacksburg, United States.<br> Advisor: Eric Sharpe
-		<br> Thesis: "<i>Low Dimensional Supersymmetric Gauge Theories and Mathematical Applications</i>" <a href="https://vtechworks.lib.vt.edu/bitstream/handle/10919/103441/Zou_H_D_2021.pdf?sequence=1&isAllowed=y" target="_blank" rel="noopener noreferrer">PDF</a> </li>
+		<br> Thesis: "<i>Low Dimensional Supersymmetric Gauge Theories and Mathematical Applications</i>"</li>
 		<li>Sep, 2013 - Jun, 2016, M.S. in Theoretical Physics at <strong>University of Chinese Academy of Sciences</strong>, Beijing, China. <br> Advisor: Fu-Zhong Yang
 		<br> Thesis: "<i>Mirror symmetry, D-brane superpotential of open-closed topological strings and Ooguri-Vafa invariants</i>"</li>
 		<li>Sep, 2009 - Jun, 2013, B.S. in Applied Physics at <strong>Nanjing University of Science and Technology</strong>, Nanjing, China.</li>
