--- a/cv/index.html
+++ b/cv/index.html
@@ -5,7 +5,7 @@ title: Hao Zou - CV
 <div class="cv">
 	<h2> Employment </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		<li>Sep, 2021 - present, postdoc at <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong>, Beijing, China.
+		<li>Sep, 2021 - present, joint postdoc at <strong>Yau Mathematical Sciences Center (YMSC) of Tsinghua University</strong> and <strong>Beijing Institute of Mathematical Sciences and Applications (BIMSA)</strong>, Beijing, China.
 	</ul>	
 	<h2> Education </h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
