--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hao Zou - Homepage
 ---
 <div class="about">
 	<p> 	
-		I will work as a postdoctoral researcher at <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
+		I will work as a joint postdoc at <a href="ymsc.tsinghua.edu.cn" target="_blank" rel="noopener noreferrer">YMSC</a> and <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
 	</p>
 	
 	<h2>Research interests</h2>
