--- a/research/index.html
+++ b/research/index.html
@@ -6,6 +6,7 @@ title: Hao Zou - Research
 	<h2>Selected papers </h2>
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1.2em; line-height: 150%">
+		<li>J. Guo and <strong>H. Zou</strong>, "Quantum cohomology of symplectic flag manifolds," <a href = "https://arxiv.org/abs/2107.09880"> arXiv:2107.09880 [hep-th]</a>. </li>
 		<li>W. Gu, L. Mihalcea, E. Sharpe and <strong>H. Zou</strong>, "Quantum K theory of symplectic Grassmannians," <a href = "https://arxiv.org/abs/2008.04909"> arXiv:2008.04909 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "GLSMs for exotic Grassmannians," JHEP 10, 200 (2020), <a href = "https://arxiv.org/abs/2008.02281"> arXiv:2008.02281 [hep-th]</a>. </li>
 		<li>W. Gu, E. Sharpe and <strong>H. Zou</strong>, "Notes on two-dimensional pure supersymmetric gauge theories," JHEP 04, 261 (2021), <a href="https://arxiv.org/abs/2005.10845">arXiv:2005.10845 [hep-th] </a>.</li>
