Update contact information

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ title: Hao Zou - Homepage
 	
 	<h2>Research interests</h2>
 	<p>
-		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics.
+		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in machine learning in theoretical high energy physics.
 	</p>
 	
 	<h2> Contact information </h2>
 	<p>
-	Hao Zou <br> Department of Physics <br> Virginia Tech <br> 850 West Campus Dr <br> Blacksburg, VA 24060, United States
+	Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Yanqihu, Huairou District, Beijing 101408, China
 	</p>	
 	<p>
-	Office: Robeson 212A <br> E-mail: hzou "at" vt.edu
+	Office: Room 1119, Building 11 - Fengyeju, Yanqi Island <br> E-mail: hzou "at" vt.edu
 	</p>
 	
 	
