--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Hao Zou - Homepage
 	
 	<h2> Contact information </h2>
 	<p>
-	Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Yanqihu, Huairou District, Beijing 101408, China
+	Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
 	</p>	
 	<p>
 	Office: Room 1119, Building 11 - Fengyeju, Yanqi Island <br> E-mail: hzou "at" vt.edu
