--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Hao Zou - Homepage
 	
 	<h2>Research interests</h2>
 	<p>
-		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in machine learning in theoretical high energy physics.
+		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in quantum information, quantum computation and machine learning in theoretical high energy physics.
 	</p>
 	
 	<h2> Contact information </h2>
