--- a/research/index.html
+++ b/research/index.html
@@ -18,5 +18,7 @@ title: Hao Zou - Research
 	<ol style="font-size:1.2em; line-height: 150%">
 		<li>"Quantum cohomology and quantum K-theory from supersymmetric gauge theories," <br> VT Algebra Seminar, Department of Mathematics, Virginia Tech, Sep 11, 2020.</li>
 		<li>"Gauged linear sigma model for symplectic Grassmannians," <br> GLSMs 2020, Zoom, Aug 18, 2020.</li>
+		<li>"WDVV equation in 2d topological conformal field theory," <br> Department of Mathematics, Virginia Tech, May 15, 2019.</li>
+		<li>"Tangent bundles of branched double covers," <br> JMU/VT meeting, Department of Physics, Virginia Tech, Feb 8, 2018.</li>
 	</ol>
 </div>
