--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Hao Zou - Homepage
 	Hao Zou <br>Beijing Insitute of Mathematical Sciences and Applications <br>Huairou District, Beijing 101408, China
 	</p>	
 	<p>
-	Office: Room 1119, Fengyeju (Building 11), Yanqi Island <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
+	Office: Room 1119, Fengyeju (Villa 11), Yanqi Island <br> E-mail: hzou "at" bimsa.cn, hzou "at" vt.edu
 	</p>
 	
 	
