--- a/research/index.html
+++ b/research/index.html
@@ -3,6 +3,11 @@ layout: default
 title: Hao Zou - Research
 ---
 <div class="research">
+	<h2>Research interests</h2>
+	<p>
+		My main research interests are supersymmetric quantum field theories, mirror symmetry, string theory as well as related mathematical topics. I am also interested in quantum information, quantum computation and machine learning in theoretical high energy physics.
+	</p>
+	
 	<h2>Selected papers </h2>
 	<p> An up-to-date publication list can be found at <a href="https://inspirehep.net/authors/1056827" target="_blank" rel="noopener noreferrer">INSPIRE-HEP</a>. </p>
 	<ol style="font-size:1.2em; line-height: 150%">
