--- a/research/index.html
+++ b/research/index.html
@@ -22,6 +22,7 @@ title: Hao Zou - Research
 	
 	<h2>Selected talks </h2>
 	<ol style="font-size:1.2em; line-height: 150%">
+		<li>"2d TQFT 101 - Part II," <br> BIMSA-Tsinghua Quantum Symmetry Seminar, BIMSA, Jan 6, 2022.</li>
 		<li>"2d TQFT 101 - Part I," <br> BIMSA-Tsinghua Quantum Symmetry Seminar, BIMSA, Dec 30, 2021.</li>
 		<li>"GLSMs for Symplectic Grassmannians and Symplectic Flag Manifolds," <br> Postdoc Workshop, Beijing Kuangou Conference Center, Sep 10, 2021.</li>
 		<li>"Quantum cohomology and quantum K-theory from supersymmetric gauge theories," <br> VT Algebra Seminar, Department of Mathematics, Virginia Tech, Sep 11, 2020.</li>
