--- a/events/index.html
+++ b/events/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Hao Zou - Events
 ---
 <div class="events">
+I am helping organizing following events:
 	<h2>BIMSA String group journal</h2>
 	
 </div>
