--- a/events/index.html
+++ b/events/index.html
@@ -6,6 +6,6 @@ title: Hao Zou - Events
 	<p>
 		I am helping organizing following events:
 	</p>	
-	<h2>BIMSA String group journal</h2>
+	<h2>BIMSA String Group Journal Club</h2>
 	
 </div>
