--- a/events/index.html
+++ b/events/index.html
@@ -4,8 +4,10 @@ title: Hao Zou - Events
 ---
 <div class="events">
 	<p>
-		I am helping organizing following events:
+		This is a list of upcoming and past events that I am or was involved.
 	</p>	
-	<h2>BIMSA String Group Journal Club</h2>
+	<h2>Forthcoming</h2>
 	
+	
+	<h2>Past events</h2>
 </div>
