--- a/events/index.html
+++ b/events/index.html
@@ -7,7 +7,9 @@ title: Hao Zou - Events
 		This is a list of upcoming and past events that I am or was involved.
 	</p>	
 	<h2>Forthcoming</h2>
-	
+	<ol style="font-size:1.2em; line-height: 150%">
+		<li> BIMSA String Group Journal Club</li>
+	</ol>
 	
 	<h2>Past events</h2>
 </div>
