--- a/events/index.html
+++ b/events/index.html
@@ -4,7 +4,7 @@ title: Hao Zou - Events
 ---
 <div class="events">
 	<p>
-		This is a list of upcoming and past events that I am or was involved.
+		This is a list of upcoming and past events that I am or have been involved.
 	</p>	
 	<h2>Forthcoming</h2>
 	<ol style="font-size:1.2em; line-height: 150%">
