--- a/events/index.html
+++ b/events/index.html
@@ -8,7 +8,8 @@ title: Hao Zou - Events
 	</p>	
 	<h2>Forthcoming</h2>
 	<ol style="font-size:1.2em; line-height: 150%">
-		<li> BIMSA String Group Journal Club</li>
+		<li> BIMSA String Group Meeting</li>
+		Bo Lin, TQFT and Entanglement.
 	</ol>
 	
 	<h2>Past events</h2>
