--- a/events/index.html
+++ b/events/index.html
@@ -7,10 +7,11 @@ title: Hao Zou - Events
 		This is a list of upcoming and past events that I am or have been involved.
 	</p>	
 	<h2>Forthcoming</h2>
-	<ol style="font-size:1.2em; line-height: 150%">
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li> BIMSA String Group Meeting</li>
-		Bo Lin, TQFT and Entanglement.
-	</ol>
-	
+		<ol style="font-size:1.2em; line-height: 150%">
+			<li> Bo Lin, TQFT and Entanglement, BIMSA, Jan 17, 2022.</li>
+		</ol>
+	</ul>
 	<h2>Past events</h2>
 </div>
