--- a/events/index.html
+++ b/events/index.html
@@ -8,10 +8,11 @@ title: Hao Zou - Events
 	</p>	
 	<h2>Forthcoming</h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		<li> BIMSA String Group Meeting</li>
-		<ol style="font-size:1.2em; line-height: 150%">
-			<li> Bo Lin, TQFT and Entanglement, BIMSA, Jan 17, 2022.</li>
-		</ol>
+		<li> BIMSA String Group Meeting/Journal Club
+			<ul style="font-size:1.2em; line-height: 150%; list-style-type: disc">
+				<li> Bo Lin, TQFT and Entanglement, BIMSA, Jan 17, 2022.</li>
+			</ul>
+		</li>
 	</ul>
 	<h2>Past events</h2>
 </div>
