--- a/events/index.html
+++ b/events/index.html
@@ -9,9 +9,9 @@ title: Hao Zou - Events
 	<h2>Forthcoming</h2>
 	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
 		<li> BIMSA String Group Meeting/Journal Club
-			<ul style="font-size:1.2em; line-height: 150%; list-style-type: disc">
+			<ol style="font-size:1.2em; line-height: 100%; list-style-type: disc">
 				<li> Bo Lin, TQFT and Entanglement, BIMSA, Jan 17, 2022.</li>
-			</ul>
+			</ol>
 		</li>
 	</ul>
 	<h2>Past events</h2>
