--- a/events/index.html
+++ b/events/index.html
@@ -6,13 +6,17 @@ title: Hao Zou - Events
 	<p>
 		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
 	</p>	
+	
 	<h2>Forthcoming</h2>
 	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
 		<li> BIMSA String Group Meeting/Journal Club
-			<ol style="font-size:0.8 em; line-height: 80%; list-style-type: disc">
-				<li> Bo Lin, TQFT and Entanglement, BIMSA, Jan 17, 2022.</li>
+			<ol style="font-size:0.8em; line-height: 80%; list-style-type: disc">
+				<li> 
+					Bo Lin (Tsinghua University), TQFT and Entanglement, BIMSA, Jan 17, 2022.
+				</li>
 			</ol>
 		</li>
 	</ul>
+	
 	<h2>Past events</h2>
 </div>
