--- a/events/index.html
+++ b/events/index.html
@@ -9,8 +9,8 @@ title: Hao Zou - Events
 	
 	<h2>Forthcoming</h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		<li> BIMSA String Group Meeting/Journal Club
-			<ol style="font-size:1.0em; line-height: 100%; list-style-type: disc">
+		<li> <strong>BIMSA String Group Meeting/Journal Club</strong>
+			<ol style="line-height: 100%; list-style-type: disc">
 				<li> 
 					Bo Lin (Tsinghua University), TQFT and Entanglement, BIMSA, Jan 17, 2022.
 				</li>
