--- a/events/index.html
+++ b/events/index.html
@@ -10,9 +10,12 @@ title: Hao Zou - Events
 	<h2>Forthcoming</h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li> <strong>BIMSA String Group Meeting/Journal Club</strong>
-			<ol style="line-height: 100%; list-style-type: disc">
+			<ol style="line-height: 100%">
 				<li> 
 					Bo Lin (Tsinghua University), TQFT and Entanglement, BIMSA, Jan 17, 2022.
+				</li>
+				<li> 
+					Wenjie Ma (BIMSA), An Overview of Recent Development of Celestial CFT, BIMSA, Jan 10, 2022.
 				</li>
 			</ol>
 		</li>
