--- a/events/index.html
+++ b/events/index.html
@@ -15,7 +15,7 @@ title: Hao Zou - Events
 					Bo Lin (Tsinghua University), TQFT and Entanglement, BIMSA, Jan 17, 2022.
 				</li>
 				<li> 
-					Wenjie Ma (BIMSA), An Overview of Recent Development of Celestial CFT, BIMSA, Jan 10, 2022.
+					Wenjie Ma (BIMSA), An Overview of Recent Developments in Celestial CFT, BIMSA, Jan 10, 2022.
 				</li>
 			</ol>
 		</li>
