--- a/events/index.html
+++ b/events/index.html
@@ -12,12 +12,8 @@ title: Hao Zou - Events
 		<li> <strong>BIMSA String Group Meeting/Journal Club</strong>
 			<ol style="line-height: 120%">
 				<li> 
-					Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians
-, BIMSA, Jan 10, 2022.
+					Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
 				</li>
-				%<li> 
-				%	Wenjie Ma (BIMSA), An Overview of Recent Developments in Celestial CFT, BIMSA, Jan 10, 2022.
-				%</li>
 			</ol>
 		</li>
 	</ul>
