--- a/events/index.html
+++ b/events/index.html
@@ -6,10 +6,8 @@ title: Hao Zou - Events
 	<p>
 		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
 	</p>	
-	
-	<h2>Forthcoming</h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		<li> <strong>BIMSA String Group Meeting/Journal Club</strong>
+		<li> <strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
 			<ol style="line-height: 120%">
 				<li> 
 					Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
@@ -17,6 +15,4 @@ title: Hao Zou - Events
 			</ol>
 		</li>
 	</ul>
-	
-	<h2>Past events</h2>
 </div>
