--- a/events/index.html
+++ b/events/index.html
@@ -14,5 +14,8 @@ title: Hao Zou - Events
 				</li>
 			</ol>
 		</li>
+		<li> 
+			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
+		</li>
 	</ul>
 </div>
