--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Hao Zou - Homepage
 ---
 <div class="about">
 	<p> 	
-		I am currently a joint postdoc at <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a> and <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I obtained my PhD in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
+		I am currently a joint postdoc at <a href="https://ymsc.tsinghua.edu.cn/cn" target="_blank" rel="noopener noreferrer">YMSC, Tsinghua</a> and <a href="http://www.bimsa.cn" target="_blank" rel="noopener noreferrer">BIMSA</a>. I received my PhD degree in physics at <a href="https://www.phys.vt.edu" target="_blank" rel="noopener noreferrer">Virginia Tech</a>.
 	</p>
 	
 	
