--- a/events/index.html
+++ b/events/index.html
@@ -7,12 +7,9 @@ title: Hao Zou - Events
 		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
 	</p>	
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		<li> <strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
-			<ol style="line-height: 120%">
-				<li> 
-					Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
-				</li>
-			</ol>
+		<li> 
+			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
+			<br> This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential colabrations among people sharing the same research interests.
 		</li>
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
