--- a/events/index.html
+++ b/events/index.html
@@ -10,6 +10,7 @@ title: Hao Zou - Events
 		<li> 
 			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
 			<br> This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential colabrations among people sharing the same research interests.
+			<br> Please click <a href="bimsagroup/index.html">Here</a> for more specific information.
 		</li>
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
