--- a/events/index.html
+++ b/events/index.html
@@ -6,13 +6,16 @@ title: Hao Zou - Events
 	<p>
 		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
 	</p>	
-	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
-		<li> 
-			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
-			<br> This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential colabrations among people sharing the same research interests. Please click <a href="bimsagroup/index.html">Here</a> for more specific information.
-		</li>
+	<ol style="font-size:1.5em; line-height: 150%; list-style-type: square; reversed: reversed"> 
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
 		</li>
-	</ul>
+		<li> 
+			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
+			<p> 
+				This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential colabrations among people sharing the same research interests. Please click <a href="bimsagroup/index.html">Here</a> for more specific information.
+			</p>
+		</li>
+		
+	</ol>
 </div>
