--- a/events/index.html
+++ b/events/index.html
@@ -6,7 +6,7 @@ title: Hao Zou - Events
 	<p>
 		This is a list of upcoming and past events that I helped to (co-)organized or have been involved.
 	</p>	
-	<ol style="font-size:1.5em; line-height: 150%; list-style-type: square; reversed: reversed"> 
+	<ul style="font-size:1.5em; line-height: 150%; list-style-type: square"> 
 		<li> 
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
 		</li>
@@ -16,6 +16,5 @@ title: Hao Zou - Events
 				This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential colabrations among people sharing the same research interests. Please click <a href="bimsagroup/index.html">Here</a> for more specific information.
 			</p>
 		</li>
-		
-	</ol>
+	</ul>
 </div>
