--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Hao Zou - Events
 ---
 <div class="events">
-	<h3>
+	<h2>
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
-	</h3>
-	<ol style="line-height: 120%">
+	</h2>
+	<ul style="line-height: 120%">
 		Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
-	</ol>
+	</ul>
 		
 </div>
