--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -6,7 +6,7 @@ title: Hao Zou - Events
 	<h2>
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
-	<ul style="line-height: 150%; list-style-type: square">
+	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
 	</ul>
 		
