--- a/events/index.html
+++ b/events/index.html
@@ -12,7 +12,7 @@ title: Hao Zou - Events
 		</li>
 		<li> 
 			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
-			<br> This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. Please click <a href="bimsagroup/index.html">Here</a> for more specific information.
+			<br> This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. Please click <a href="bimsagroup/">Here</a> for more specific information.
 		</li>
 	</ul>
 </div>
