--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hao Zou - Events
+title: Hao Zou - BIMSA String Group Meeting/Journal Club
 ---
 <div class="events">
 	<h2>
