--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Hao Zou - BIMSA String Group Meeting/Journal Club
 ---
 <div class="events">
+	<p style="font-size:1.0em; text-align:right;" > <a href="https://hhzou.github.io/events/">Click here for other events </a> </p>
 	<h2>
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
