--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -8,7 +8,12 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
-		Bo Lin (Tsinghua University), Quantum entanglement meets topological field theory: an introduction for pedestrians, BIMSA, Jan 10, 2022.
+		<li>
+			Wenjie Ma (BIMSA), An Overview of Recent Developments in Celestial CFT, BIMSA, Time need to be confirmed.
+		</li>
+		<li>
+			Bo Lin (Tsinghua University), Quantum Entanglement Meets Topological Field Theory: An Introduction for Pedestrians, BIMSA, Jan 10, 2022.
+		</li>
 	</ul>
 		
 </div>
