--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -7,6 +7,9 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 	<h2>
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
+	<p>
+		This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. 	
+	</p>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>
 			Wenjie Ma (BIMSA), An Overview of Recent Developments in Celestial CFT, BIMSA, Time need to be confirmed.
