--- a/events/index.html
+++ b/events/index.html
@@ -11,8 +11,7 @@ title: Hao Zou - Events
 			<strong>Tsinghua-BIMSA 4d Chern-Simons Learning Seminar (To be confirmed)</strong>
 		</li>
 		<li> 
-			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong>
-			<br> Please click <a href="bimsagroup/">Here</a> for more specific information.
+			<strong>BIMSA String Group Meeting/Journal Club (2022 - present)</strong> <a href="bimsagroup/">More...</a>
 		</li>
 	</ul>
 </div>
