--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -8,14 +8,20 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 		BIMSA String Group Meeting/Journal Club (Jan. 2022 - present)
 	</h2>
 	<p>
-		This event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. 	
+		This weekly event is intended to bring all hep-th researchers at BIMSA together and boosts the academic communications and potential collaboration among people sharing the same research interests. 	
 	</p>
 	<ul style="font-size:1.2em; line-height: 150%; list-style-type: square"> 
 		<li>
-			Wenjie Ma (BIMSA), An Overview of Recent Developments in Celestial CFT, BIMSA, Time need to be confirmed.
+			Speaker: Wenjie Ma (BIMSA)
+			<br> Location: Medium Conference Room 1, BIMSA
+			<br> Title: An Overview of Recent Developments in Celestial CFT
+			<br> Date and Time: Need to be confirmed.
 		</li>
 		<li>
-			Bo Lin (Tsinghua University), Quantum Entanglement Meets Topological Field Theory: An Introduction for Pedestrians, BIMSA, Jan 10, 2022.
+			Speaker: Bo Lin (Tsinghua University)
+			<br> Location: Medium Conference Room 1, BIMSA
+			<br> Title: Quantum Entanglement Meets Topological Field Theory: An Introduction for Pedestrians
+			<br> Date and Time: 1:00 - 2:00 PM, Jan 10, 2022.
 		</li>
 	</ul>
 		
