--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -15,7 +15,7 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 			Speaker: Wenjie Ma (BIMSA)
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Title: An Overview of Recent Developments in Celestial CFT
-			<br> Date and Time: Need to be confirmed.
+			<br> Date and Time: 4:00 - 6:00 PM, Jan 13, 2022.
 		</li>
 		<li>
 			Speaker: Bo Lin (Tsinghua University)
