--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -14,6 +14,12 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 		<li>
 			Speaker: Wenjie Ma (BIMSA)
 			<br> Location: Medium Conference Room 1, BIMSA
+			<br> Title: An Overview of Recent Developments in Celestial CFT (Continued)
+			<br> Date and Time: 4:00 - 6:00 PM, Jan 20, 2022.
+		</li>
+		<li>
+			Speaker: Wenjie Ma (BIMSA)
+			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Title: An Overview of Recent Developments in Celestial CFT
 			<br> Date and Time: 4:00 - 6:00 PM, Jan 13, 2022.
 		</li>
