--- a/events/bimsagroup/index.html
+++ b/events/bimsagroup/index.html
@@ -22,12 +22,14 @@ title: Hao Zou - BIMSA String Group Meeting/Journal Club
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Title: An Overview of Recent Developments in Celestial CFT
 			<br> Date and Time: 4:00 - 6:00 PM, Jan 13, 2022.
+			<br> Notes: <a href="http://www.goshboard.com/res/img.html?id=fb4251f1b4b84932be9c83dcdd323595"> Link to notes </a>
 		</li>
 		<li>
 			Speaker: Bo Lin (Tsinghua University)
 			<br> Location: Medium Conference Room 1, BIMSA
 			<br> Title: Quantum Entanglement Meets Topological Field Theory: An Introduction for Pedestrians
 			<br> Date and Time: 1:00 - 2:00 PM, Jan 10, 2022.
+			<br> Notes: <a href="http://www.goshboard.com/res/img.html?id=2ac40ceeaa4e4b0a8fe6bb4021148e2b"> Link to notes </a>
 		</li>
 	</ul>
 		
